	(ht_weak_p, kvtable_data, ht_kvt_data): new macros
	(weakkvt_t): new lrecord
	(TheSarray, TheVarobject, ThePointer): added weakkvt_type
	(Weakkvt_length, TheWeakKVT, weakkvtp, case_Rectype_WeakKVT_above):
	concomitant macros
	(if_recordp): Rectype_WeakKVT is not a record
	(allocate_weakkvt): declare
	(map_hashtable, map_hashtable_nogc): accomodate weak hash-tables
	* places.lisp (hash-table-weak-p): added defsetf
	* predtype.d (CLASS-OF, TYPE-OF, heap_statistics_mapper):
	handle Weak KVT
	(enum_hs_weakkvt): added to the enum
	* spvw.d (init_object_tab_1): init O(all_weakkvtables)
	* spvw_garcol.d (gar_col_normal): mark & update O(all_weakkvtables)
	(gar_col_compact, move_conses): update O(all_weakkvtables)
	* spvw_global.d (init_mem_heaptypes): handle Weak KVT
	* spvw_memfile.d (savemem, loadmem_from_handle):
	update O(all_weakkvtables)
	* spvw_objsize.d (objsize): handle case_weakkvt
	* spvw_typealloc (allocate_weakkvt): implemented
	* spvw_update.d (update_weakkvtables, update_weakkvtables_mod): added
	* subr.d (make_hash_table): added :WEAK
	(hash_table_weak_p, set_hash_table_weak_p): added
	* subrkw.d (make_hash_table): added :WEAK
	* version.h, VERSION: bumped to 2.27.3

2002-02-26  Sam Steingold  <sds@gnu.org>

	* error.d (signal_and_debug): avoid a GCC warning

2002-02-26  Sam Steingold  <sds@gnu.org>

	lib dir can now be changed at run-time
	* constsym.d, subr.d (set_lib_directory); added
	* constobj.d (lib_dir): new object
	* pathname.d (LIB-DIRECTORY): use it
	(SET-LIB-DIRECTORY): set it (new function)
	* spvw.d (main): set it from argv_lisplibdir
	* _clisp.html, _clisp.1: document that
	* places.lisp (*lib-directory*): new symbol-macro
	* init.lisp (*lib-directory*): export it from CUSTOM
	* describe (clisp-data-file): new function
	(unicode-data-file): removed
	(unicode-attributes-line): use CLISP-DATA-FILE
	instead of UNICODE-DATA-FILE
	* clhs.lisp (clhs-file): removed
	(clhs): use CLISP-DATA-FILE instead of CLHS-FILE